# qa_guru_hw_16_poetry

./: README.md  pyproject.toml
